[feature] Add Material Button Style

--- a/style/src/main/res/values/attrs.xml
+++ b/style/src/main/res/values/attrs.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="toolbar_style" format="reference"/>
+    <attr name="button_style_material" format="reference"/>
 </resources>
