--- a/boorupostview/src/main/res/values/ids.xml
+++ b/boorupostview/src/main/res/values/ids.xml
@@ -11,4 +11,8 @@
     <item name="search_edit_text" type="id"/>
     <item name="search_text_box" type="id"/>
     <item name="search_chip_group" type="id"/>
+    <item name="viewpager" type="id"/>
+    <item name="gridview" type="id"/>
+    <item name="progressbar" type="id"/>
+    <item name="panelview_content" type="id"/>
 </resources>
