--- a/boorupostview/src/main/res/values/ids.xml
+++ b/boorupostview/src/main/res/values/ids.xml
@@ -15,4 +15,5 @@
     <item name="gridview" type="id"/>
     <item name="progressbar" type="id"/>
     <item name="panelview_content" type="id"/>
+    <item name="messageview" type="id"/>
 </resources>
