[feature] Add swipe refresh layout for updating a posts

--- a/boorupostview/src/main/res/values/ids.xml
+++ b/boorupostview/src/main/res/values/ids.xml
@@ -23,4 +23,5 @@
     <item name="bottombar_left" type="id"/>
     <item name="bottombar_center" type="id"/>
     <item name="bottombar_right" type="id"/>
+    <item name="swiperefresh" type="id"/>
 </resources>
