--- a/imageview/src/main/res/values/ids.xml
+++ b/imageview/src/main/res/values/ids.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="imageview" type="id"/>
+    <item name="download" type="id"/>
+    <item name="popupanchor" type="id"/>
+    <item name="listview" type="id"/>
 </resources>
