feat(android): Add toolbar for the start screen

--- a/application/android/app/src/main/res/values/colors.xml
+++ b/application/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="background">#FFFFFF</color>
+    <color name="separator">#E0E0E0</color>
+    <color name="text">#0C0C0D</color>
 </resources>
