--- a/application/android/app/src/main/res/values/styles.xml
+++ b/application/android/app/src/main/res/values/styles.xml
@@ -1,10 +1,22 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Default" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/white</item>
         <item name="colorAccent">@android:color/black</item>
+
+        <item name="booruchanToolbar">@style/Default.Toolbar</item>
+    </style>
+
+    <style name="Default.Toolbar">
+        <item name="android:background">@color/background</item>
+        <item name="android:textSize">@dimen/toolbar_text_size</item>
+        <item name="android:textColor">@color/text</item>
+    </style>
+
+    <style name="Default.Separator">
+        <item name="android:background">@color/separator</item>
     </style>
 
 </resources>
