--- a/application/android/app/src/main/res/layout/fragment_start.xml
+++ b/application/android/app/src/main/res/layout/fragment_start.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -18,5 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/separator_height"
         app:layout_constraintTop_toBottomOf="@id/fragment_start_toolbar" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_start_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingEnd="24dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/fragment_start_toolbar_separator"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="RtlSymmetry" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
