--- a/application/android/app/src/main/res/values/dimen.xml
+++ b/application/android/app/src/main/res/values/dimen.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Toolbar -->
     <dimen name="toolbar_height">56dp</dimen>
     <dimen name="toolbar_text_size">20sp</dimen>
+    
+    <!-- Text -->
+    <dimen name="main_text_size">16sp</dimen>
+    
+    <!-- Margins and Paddings -->
+    <dimen name="dimenM">16dp</dimen>
+    
     <dimen name="separator_height">1dp</dimen>
 </resources>
