--- a/application/android/app/src/main/res/values/styles.xml
+++ b/application/android/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/white</item>
         <item name="colorAccent">@android:color/black</item>
+        <item name="android:statusBarColor">@android:color/black</item>
 
         <item name="booruchanToolbar">@style/Default.Toolbar</item>
     </style>
@@ -14,9 +15,22 @@
         <item name="android:textSize">@dimen/toolbar_text_size</item>
         <item name="android:textColor">@color/text</item>
     </style>
-
+    
     <style name="Default.Separator">
         <item name="android:background">@color/separator</item>
+    </style>
+
+    <style name="Default.Text">
+        <item name="android:textColor">@color/text</item>
+    </style>
+
+    <style name="Default.Text.Main">
+        <item name="android:textSize">@dimen/main_text_size</item>
+    </style>
+
+    <style name="Default.Text.Support">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/dimmed</item>
     </style>
 
 </resources>
