feat(android): Add container for the inner booru screens
such as posts, menu, account, etc.

--- a/application/android/app/src/main/res/values/colors.xml
+++ b/application/android/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="separator">#E0E0E0</color>
     <color name="text">#0C0C0D</color>
     <color name="dimmed">#99000000</color>
+    <color name="opaque">#4D000000</color>
 </resources>
