--- a/application/android/app/src/main/res/values/dimen.xml
+++ b/application/android/app/src/main/res/values/dimen.xml
@@ -3,6 +3,10 @@
     <!-- Toolbar -->
     <dimen name="toolbar_height">56dp</dimen>
     <dimen name="toolbar_text_size">20sp</dimen>
+
+    <!-- Toolbar Day differences -->
+    <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="toolbar_separator_height">0dp</dimen>
     
     <!-- Text -->
     <dimen name="main_text_size">16sp</dimen>
