--- a/application/android/app/src/main/res/values-night/dimen.xml
+++ b/application/android/app/src/main/res/values-night/dimen.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Toolbar Night differences -->
+    <!-- Toolbar Dark differences -->
     <dimen name="toolbar_elevation">0px</dimen>
     <dimen name="toolbar_separator_height">1dp</dimen>
 </resources>
