--- a/application/android/app/src/main/res/layout/fragment_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_posts.xml
@@ -36,10 +36,24 @@
         android:visibility="gone"
         style="@style/Default.Text.Support"
         android:id="@+id/fragment_posts_message"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingHorizontal="@dimen/dimenL"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_posts_title" />
+
+    <com.google.android.material.button.MaterialButton
+        android:visibility="gone"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:id="@+id/fragment_posts_retry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/posts_button_retry"
+        android:layout_marginTop="@dimen/dimenL"
+        app:layout_constraintTop_toBottomOf="@id/fragment_posts_message"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
