--- a/application/android/app/src/main/res/layout/fragment_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_posts.xml
@@ -4,22 +4,42 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        style="@style/Default.Toolbar"
+        android:id="@+id/fragment_posts_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_height"
+        app:menu="@menu/posts_toolbar"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="@dimen/toolbar_elevation" />
+
+    <View
+        style="@style/Default.Separator"
+        android:id="@+id/fragment_posts_separator"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/toolbar_separator_height"
+        app:layout_constraintBottom_toBottomOf="@id/fragment_posts_toolbar" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_posts_recycler"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginHorizontal="@dimen/dimenXS" />
+        android:layout_height="0dp"
+        android:paddingTop="@dimen/dimenS"
+        android:clipToPadding="false"
+        android:layout_marginHorizontal="@dimen/dimenXS"
+        app:layout_constraintTop_toBottomOf="@id/fragment_posts_separator"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <ProgressBar
         style="?attr/booruchanProgress"
         android:id="@+id/fragment_posts_progress"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/fragment_posts_separator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
         android:visibility="gone"
@@ -30,7 +50,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_posts_separator" />
 
     <TextView
         android:visibility="gone"
@@ -42,7 +62,7 @@
         android:paddingHorizontal="@dimen/dimenL"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_posts_title" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_posts_separator" />
 
     <com.google.android.material.button.MaterialButton
         android:visibility="gone"
