fix(android): Fix overlaying content

--- a/application/android/app/src/main/res/layout/fragment_posts.xml
+++ b/application/android/app/src/main/res/layout/fragment_posts.xml
@@ -23,6 +23,7 @@
         android:id="@+id/fragment_posts_panel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:umanoOverlay="true"
         app:umanoPanelHeight="0dp"
         android:gravity="top">
 
@@ -72,7 +73,7 @@
                 android:paddingHorizontal="@dimen/dimenL"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/fragment_posts_title" />
 
             <com.google.android.material.button.MaterialButton
                 android:visibility="gone"
