--- a/application/android/app/src/main/res/values/attrs.xml
+++ b/application/android/app/src/main/res/values/attrs.xml
@@ -4,5 +4,6 @@
     <attr name="booruchanSeparator" format="reference" />
     <attr name="booruchanProgress" format="reference" />
     <attr name="booruchanAutocomplete" format="reference" />
+    <attr name="booruchanButtonToggle" format="reference" />
 
 </resources>
